# DSpecM1D

./: #input_step#  .clang-format  .gitignore  API_COVERAGE_MATRIX.md  API_HARDENING_PLAN.md  API_HARDENING_STATUS.md  CMakeCache.txt  CMakeLists.txt  CMakeOld.txt  CMakePresets.json  ClangBuildAnalyzerSession.txt  Final pre-release todos.odt  IMPLEMENTATION_STATUS.md  README.md  STYLE_GUIDE.md  TEST_INVENTORY.md  ex6_input.txt  full_codebase.txt  input_bench_step.txt  input_element  input_element~  recommendations.txt  runexamples.sh  update_script.py
.github/workflows/: ci.yml  pages.yml
DSpecM1D/: All  EarthMesh  FrequencyTools  ModelConcepts  ModelInput  Timer
DSpecM1D/src/: BiCGSTABT.h  DSpecMFacade.h  FEMPreconditioner.h  FEM_Preconditioner.h  FullSpec.h  FullSpecMultiSem.h  FullSpecSingleSem.h  FullSpec_MultiSem.h  FullSpec_SingleSem.h  InputParametersNew.h  InputParser.h  MeshModel.h  NormClass.h  OutputWriters.h  ParamInfo.h  ParamRedInfo.h  ReadMineos.h  ReadSpecnm.h  ReadStation.h  ReadYSpec.h  ReferenceSeriesIO.h  SRInfo.h  SR_Info.h  SignalFiltering.h  SourceInfo.h  SpecHelpers.h  SpectraMaster.h  SpectraMasterImpl.h  SpectraRunContext.h  StartElement.h  Timer.h  full_spec.h  input_parser.h  mesh_model.h  norm_class.h  spectra_master.h  spectra_master_impl.h  start_element.h
bench_params/: ex2.txt  ex3.txt  ex4.txt  ex5.txt  ex6.txt  input_bench_bolivia_mf.txt  input_bench_hf.txt  input_bench_lf.txt  input_bench_mf.txt  input_bench_mf_0.txt  input_bench_st.txt  input_bench_step.txt  input_bench_tor.txt  input_debug.txt  input_full.txt  input_full2.txt  input_record.txt  input_sph.txt
benchmarks/: BiCGSTABT.h  CMakeLists.txt  FEM_Preconditioner.h  PaperExampleSupport.h  SR_Info.h  SourceInfo.h  bench_bolivia.cpp  bench_fast.cpp  bench_highfrequency.cpp  bench_lf.cpp  bench_mf.cpp  bench_red.cpp  bench_st.cpp  bench_step.cpp  bench_tor.cpp  config.h.in  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  example_record.cpp  full_spec.h  input_parser.h  read_mineos.h  read_yspec.h  sem_full.h  spectra_master.h  start_element.h  test_rot.cpp  tidal_forcing.cpp
cmake/: DSpecM1DConfig.cmake.in  FindSuiteSparse.cmake
data/models/: prem.200.no.noatten.txt  prem.200.noatten.txt  prem.specnm.txt
data/params/: ex1.txt  ex2.txt  ex3.txt  ex4.txt  ex5.txt  ex6.txt  ex7.txt  generate_seismogram_smoke.txt  t1.txt
data/reference/: README.md
docs/: CMakeLists.txt  Doxyfile.in
docs/site/: index.html  installation.html  library-testing.html  paper-reproduction.html  parameter-files.html  release-notes.html  testing-coverage.html  testing-inputs.html  testing-io.html  testing-smoke.html  testing-solver.html
docs/site/assets/: style.css
examples/: CMakeLists.txt  MatrixIndices.h  SourceInfo.h  augment_basis.cpp  augment_test.cpp  bolivia_cmt_event  convergence_number.cpp  convergence_number.h  extractmineos.cpp  extracttoroidal.cpp  inp_values  inp_values2  lsem_toroidal.cpp  onedexample.cpp  pch.h  pch2.h  premrewrite.cpp  sem_toroidal.h  splinetest.cpp  string_classdefinitions.h  test_spectra.cpp  testexample.cpp  testwigner.cpp  toroidal.cpp  toroidal.h  toroidal_bench.cpp  toroidal_bench.h  toroidal_clean.h  toroidal_comparison.cpp  toroidal_gal.cpp  toroidal_gal.h  toroidal_l_augtest.cpp  toroidal_mineos.cpp  toroidal_sem.cpp  toroidal_spectra.cpp  toroidal_sphere.cpp
new_coupling/: All
new_coupling/src/: base_model.h
plotting/functions/: ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py
spheroidal_examples/: CMakeLists.txt  MatrixIndices.h  check_script.cpp  debug_atten.cpp  debug_full.cpp  debug_processing.cpp  debug_rad.cpp  debug_sph.cpp  debug_tor.cpp  example_record.cpp  full_lmax.cpp  full_spec.h  input.txt  mesh_model.h  paper_examples.cpp  precon_test.h  read_station.h  sem_full.h  sem_spheroidal.h  sem_spheroidal2.h  sem_spheroidal_debug.h  spectra_master.h  spheroidal_1.cpp  spheroidal_lmax.cpp  start_element.h  tensorcalc.cpp  test_start.cpp
tests/: CMakeLists.txt  compare_ex2_reference.py  config.h.in  run_ex2_reference_check.cmake  run_generate_seismogram_smoke.cmake  test_input_parameters_new.cpp  test_input_parser.cpp  test_math.cpp  test_output_writers.cpp  test_reference_series_io.cpp  test_sem_component.cpp  test_signal_filtering.cpp  test_solver_api.cpp  test_spec_helpers.cpp  test_utils.h
tools/: CMakeLists.txt  generate_seismogram.cpp
tutorials/: CMakeLists.txt  t1.cpp
work/benchmarks/: Bench_Error_Step.py  Bench_MF.py  Bench_Paper_Bolivia.py  Bench_Paper_Record.py  Bench_Paper_Record_Final.py  Bench_Paper_Record_Radial.py  Bench_Spectra_Bolivia.py  Bench_Spectra_HF.py  Bench_Spectra_LF.py  Bench_Spectra_LF_YSPEC.py  Bench_Spectra_LF_YSPEC_E.py  Bench_Spectra_LF_YSPEC_N.py  Bench_Spectra_LF_YSPEC_Z.py  Bench_Spectra_MF.py  Bench_Spectra_Step.py  Bench_Spectra_Tor.py  Bench_Time_Bolivia.py  Bench_Time_Bolivia.py~  Bench_Time_LF.py  Bench_Time_MF.py  Bench_Time_ST.py  Bench_Time_Step.py  Bench_Time_TOR.py  Example_1.py  Example_3.py  Example_5.py  GroundMotionBothAllT.py  GroundMotionBothT.py  GroundMotionCOMP2.py  GroundMotionCOMP_HF.py  GroundMotionRecord.py  GroundMotionZoomedAllT.py  KE_Dependence.py  Paper_Tidal.py  Paper_Tidal_2.py  Spectra_MINEOS_ALL.py  Spectra_MINEOS_COMP.py  Tidal_Forcing.py  travel_times.txt
work/other/: plotcheck.py  ploterror.py  plotintegral.py  plotprem.py  splineplot.py  traction_plot.py
work/spheroidal/: ExampleResponse.py  ExampleResponseR.py  GroundMotion.py  GroundMotion2.py  GroundMotionAllComp.py  GroundMotionBothAll.py  GroundMotionBothAllT.py  GroundMotionBothError.py  GroundMotionL.py  GroundMotionRAW.py  GroundMotionRecord.py  GroundMotionT.py
work/string/: aug_basis.py  ploteigen.py  spec_sol.py  spec_sol2.py
work/test/: RadiusTurn.py
work/toroidal/: GroundMotion.py  GroundMotion2.py  GroundMotionComp.py  GroundMotionComp2.py  GroundMotionFilt.py  aug_basis.py  benchmark.py  eigenvectors.py  mineos_bench.out_1  mineos_bench.out_10  mineos_bench.out_2  mineos_bench.out_3  mineos_bench.out_4  mineos_bench.out_5  mineos_bench.out_6  mineos_bench.out_7  plotfunc.py  (+5 more)
(+46 files in other folders)
